--- a/config.json
+++ b/config.json
@@ -1,5 +1,138 @@
 {
   "cache_time": 7200,
   "api_site": {
+
+    "iqiyizyapi": {
+      "api": "https://iqiyizyapi.com/api.php/provide/vod",
+      "name": "爱奇艺资源",
+      "detail": "https://iqiyizyapi.com"
+    },
+
+    "dbzy": {
+      "api": "https://caiji.dbzy5.com/api.php/provide/vod",
+      "name": "豆瓣资源",
+      "detail": "https://caiji.dbzy5.com"
+    },
+
+    "feifan": {
+      "api": "https://api.ffzyapi.com/api.php/provide/vod",
+      "name": "非凡资源",
+      "detail": "https://api.ffzyapi.com"
+    },
+
+    "wolong": {
+      "api": "https://wolongzyw.com/api.php/provide/vod",
+      "name": "卧龙资源",
+      "detail": "https://wolongzyw.com"
+    },
+
+    "zuida": {
+      "api": "https://api.zuidapi.com/api.php/provide/vod",
+      "name": "最大资源",
+      "detail": "https://api.zuidapi.com"
+    },
+
+    "maoyanzy": {
+      "api": "https://api.maoyanapi.top/api.php/provide/vod",
+      "name": "猫眼资源",
+      "detail": "https://api.maoyanapi.top"
+    },
+
+    "lzcaiji": {
+      "api": "https://cj.lzcaiji.com/api.php/provide/vod",
+      "name": "量子资源",
+      "detail": "https://cj.lzcaiji.com"
+    },
+
+    "360zy": {
+      "api": "https://360zyzz.com/api.php/provide/vod",
+      "name": "360资源",
+      "detail": "https://360zyzz.com"
+    },
+
+    "baiduyun": {
+      "api": "https://api.apibdzy.com/api.php/provide/vod",
+      "name": "百度云资源",
+      "detail": "https://api.apibdzy.com"
+    },
+
+    "baofeng": {
+      "api": "https://bfzyapi.com/api.php/provide/vod",
+      "name": "暴风资源",
+      "detail": "https://bfzyapi.com"
+    },
+
+    "jisu": {
+      "api": "https://jszyapi.com/api.php/provide/vod",
+      "name": "极速资源",
+      "detail": "https://jszyapi.com"
+    },
+
+    "tianya": {
+      "api": "https://tyyszy.com/api.php/provide/vod",
+      "name": "天涯资源",
+      "detail": "https://tyyszy.com"
+    },
+
+    "wujin": {
+      "api": "https://api.wujinapi.com/api.php/provide/vod",
+      "name": "无尽资源",
+      "detail": "https://api.wujinapi.com"
+    },
+
+    "modu": {
+      "api": "https://www.mdzyapi.com/api.php/provide/vod",
+      "name": "魔都资源",
+      "detail": "https://www.mdzyapi.com"
+    },
+
+    "ruyi": {
+      "api": "https://cj.rycjapi.com/api.php/provide/vod",
+      "name": "如意资源",
+      "detail": "https://cj.rycjapi.com"
+    },
+
+    "wangwang": {
+      "api": "https://wwzy.tv/api.php/provide/vod",
+      "name": "旺旺资源",
+      "detail": "https://wwzy.tv"
+    },
+
+    "hongniu": {
+      "api": "https://www.hongniuzy2.com/api.php/provide/vod",
+      "name": "红牛资源",
+      "detail": "https://www.hongniuzy2.com"
+    },
+
+    "guangsu": {
+      "api": "https://api.guangsuapi.com/api.php/provide/vod",
+      "name": "光速资源",
+      "detail": "https://api.guangsuapi.com"
+    },
+
+    "youku": {
+      "api": "https://api.ukuapi.com/api.php/provide/vod",
+      "name": "优酷资源",
+      "detail": "https://api.ukuapi.com"
+    },
+
+    "yinghua": {
+      "api": "https://m3u8.apiyhzy.com/api.php/provide/vod",
+      "name": "樱花资源（动漫强）",
+      "detail": "https://m3u8.apiyhzy.com"
+    },
+
+    "suoni": {
+      "api": "https://suoniapi.com/api.php/provide/vod",
+      "name": "索尼资源",
+      "detail": "https://suoniapi.com"
+    },
+
+    "subo": {
+      "api": "https://subocaiji.com/api.php/provide/vod",
+      "name": "速博资源",
+      "detail": "https://subocaiji.com"
+    }
+
   }
 }
